--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@brainhubeu/react-carousel": "^1.19.26",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "next": "^10.0.7",
     "next-compose-plugins": "^2.2.1",
@@ -30,5 +31,6 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^2.0.1",
     "prop-types": "^15.7.2"
-  }
+  },
+  "proxy": "http://localhost:8000/"
 }
